even more cleaning and styling

--- a/ClientApp/src/app/book-view/book-view.component.html
+++ b/ClientApp/src/app/book-view/book-view.component.html
@@ -9,6 +9,6 @@
   <div class="buttons">
     <button class="btn btn-sm btn-ok" [routerLink]="['/edit', bookId]">Edit</button>
     <button class="btn btn-sm btn-danger" (click)="deleteBook()">Delete</button>
-    <button class="btn btn-sm btn-info" routerLink="/catalog">Nevermind!</button>
+    <button class="btn btn-sm btn-info" routerLink="/catalog">Catalog!</button>
   </div>
 </div>
