--- a/ClientApp/src/app/new-book/new-book.component.html
+++ b/ClientApp/src/app/new-book/new-book.component.html
@@ -41,7 +41,7 @@
         </div>
       </div>
       <button class="btn btn-ok" (click)="save()">Save</button>
-      <button class="btn btn-info" routerLink="/catalog">Catalog</button>
+      <button class="btn btn-info" routerLink="/catalog">Nevermind!</button>
     </form>
   </div>
 </div>
