--- a/ClientApp/src/app/book/book.component.html
+++ b/ClientApp/src/app/book/book.component.html
@@ -3,9 +3,9 @@
         <div class="card text-center">
             <div class="card-body">
                 <h5 class="card-title">{{book.title}}</h5>
-                <h6 class="card-subtitle mb-2 text-muted">{{book.author}}</h6>
-                <h6 class="card-subtitle mb-2 text-muted">Series: {{book.series}}</h6>
-                <h6 class="card-subtitle mb-2 text-muted">Status: {{book.status}}</h6>
+                <h6 class="card-subtitle mb-2 ">{{book.author}}</h6>
+                <h6 class="card-subtitle mb-2 "  *ngIf="book.series!='none'">Series: {{book.series}}</h6>
+                <h6 class="card-subtitle mb-2 ">Status: {{book.status}}</h6>
                 <button class="btn btn-sm btn-ok" [routerLink]="['/book', book.id]">View</button>
             </div>
         </div>
