--- a/ClientApp/src/app/confirm-modal/confirm-modal.component.html
+++ b/ClientApp/src/app/confirm-modal/confirm-modal.component.html
@@ -1,7 +1,7 @@
-<ng-template #content let-modal>
+
     <div class="modal-header">
       <h4 class="modal-title">Modal title</h4>
-      <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
+      <button type="button" class="close" aria-label="Close" (click)="close('Cross click')">
         <span aria-hidden="true">&times;</span>
       </button>
     </div>
@@ -9,7 +9,7 @@
       <p>Are you sure want to delete this book??</p>
     </div>
     <div class="modal-footer">
-      <button type="button" class="btn btn-danger" (click)="modal.yes('Close click')">Yes</button>
-      <button type="button" class="btn btn-ok" (click)="modal.close('Close click')">Close</button>
+      <button type="button" class="btn btn-danger" (click)="yes('Close click')">Yes</button>
+      <button type="button" class="btn btn-ok" (click)="close('Close click')">Close</button>
     </div>
-  </ng-template>
+
