--- a/ClientApp/src/app/home/home.component.html
+++ b/ClientApp/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="!(isAuthenticated | async)" class="card">
+<div *ngIf="!(isAuthenticated | async)" class="card text-center">
   <h2>Welcome to your personal library!</h2>
   <p>Current Features:</p>
   <ul>
