--- a/ClientApp/src/app/confirm-modal/confirm-modal.component.html
+++ b/ClientApp/src/app/confirm-modal/confirm-modal.component.html
@@ -1,15 +1,7 @@
-
-    <div class="modal-header">
-      <h4 class="modal-title">Modal title</h4>
-      <button type="button" class="close" aria-label="Close" (click)="close('Cross click')">
-        <span aria-hidden="true">&times;</span>
-      </button>
-    </div>
-    <div class="modal-body">
-      <p>Are you sure want to delete this book??</p>
-    </div>
-    <div class="modal-footer">
-      <button type="button" class="btn btn-danger" (click)="yes('Close click')">Yes</button>
-      <button type="button" class="btn btn-ok" (click)="close('Close click')">Close</button>
-    </div>
-
+<div class="modal-body text-center">
+  <h3>Trash this book forever??</h3>
+  <div class="buttons">
+    <button tyh3e="button" class="btn btn-danger" (click)="yes('Close click')">Yes</button>
+    <button tyh3e="button" class="btn btn-ok" (click)="close('Close click')">No!</button>
+  </div>
+</div>
