--- a/ClientApp/src/app/confirm-modal/confirm-modal.component.html
+++ b/ClientApp/src/app/confirm-modal/confirm-modal.component.html
@@ -1,4 +1,4 @@
-<div class="modal-body text-center">
+<div class="pop text-center">
   <h3>Trash this book forever??</h3>
   <div class="buttons">
     <button tyh3e="button" class="btn btn-danger" (click)="yes('Close click')">Yes</button>
