--- a/ClientApp/src/app/book/book.component.html
+++ b/ClientApp/src/app/book/book.component.html
@@ -1,12 +1,14 @@
-<div class="row">
-    <div *ngFor="let book of books" class="col-4 m-auto">
-        <div class="card text-center">
-            <div class="card-body">
-                <h5 class="card-title">{{book.title}}</h5>
-                <h6 class="card-subtitle mb-2 ">{{book.author}}</h6>
-                <h6 class="card-subtitle mb-2 "  *ngIf="book.series!='none'">Series: {{book.series}}</h6>
-                <h6 class="card-subtitle mb-2 ">Status: {{book.status}}</h6>
-                <button class="btn btn-sm btn-ok" [routerLink]="['/book', book.id]">View</button>
+<div class="card-deck">
+    <div class="row">
+        <div *ngFor="let book of books" class="col-4 m-auto">
+            <div class="card text-center">
+                <div class="card-body">
+                    <h5 class="card-title">{{book.title}}</h5>
+                    <h6 class="card-subtitle mb-2 ">{{book.author}}</h6>
+                    <h6 class="card-subtitle mb-2 " *ngIf="book.series!='none'">Series: {{book.series}}</h6>
+                    <h6 class="card-subtitle mb-2 ">Status: {{book.status}}</h6>
+                    <button class="btn btn-sm btn-ok" [routerLink]="['/book', book.id]">View</button>
+                </div>
             </div>
         </div>
     </div>
