--- a/ClientApp/src/styles.css
+++ b/ClientApp/src/styles.css
@@ -6,10 +6,6 @@ a:hover{
   color: #e72c0a;
 }
 
-.code {
-  color: #e01a76;
-}
-
 .btn-ok {
   background-color: #05325c;
   color: #ffdbcd;
@@ -33,12 +29,16 @@ body {
   }
 
 h1,h2,h3,h5,h6 {
-  color: #cc2407;
+  color: #f08080;
 }
-
 
 h1 {
   text-decoration: underline;
+}
+
+.home {
+  text-decoration: underline;
+  color: #ffdbcd;
 }
 
 footer {
@@ -49,7 +49,7 @@ footer {
 .card {
   background-color: rgb(2, 27, 51, 0.5);
   color: #f08080;
-  width: 70%;
+  width: 100%;
 }
 
 .card li {
