can get by isbn and log to console

--- a/ClientApp/src/app/new-book/new-book.component.html
+++ b/ClientApp/src/app/new-book/new-book.component.html
@@ -1,5 +1,9 @@
 <div class="card text-center">
   <h3>Add a book to the catalog</h3>
+  <div>
+    <input [(ngModel)]="isbn">
+    <button (click)="getByIsbn()">Add</button>
+  </div>
   <div class="align-items-center">
     <form>
       <div class="row">
