--- a/ClientApp/src/styles.css
+++ b/ClientApp/src/styles.css
@@ -30,6 +30,7 @@ body {
 
 h1,h2,h3,h5,h6 {
   color: #f08080;
+  font-family: 'Alice', serif;
 }
 
 h1 {
@@ -47,17 +48,18 @@ footer {
 }
 
 .card {
-  background-color: rgb(2, 27, 51, 0.5);
+  background-color: #c564587a;
+  border: 2px solid #05325c;
   width: 100%;
+  color: #1a0300;
 }
 
 .card li {
-  color: #ffdbcd;
+  color: #B15F61;
   list-style-type: none;
 }
 
-.card-subtitle {
-  color: #ffdbcd;
-
+.card-subtitle, .card-title {
+  color: #001036;
 }
 
