--- a/ClientApp/src/app/book-table/book-table.component.html
+++ b/ClientApp/src/app/book-table/book-table.component.html
@@ -8,7 +8,7 @@
     <mat-label>Search catalog</mat-label>
     <input (focus)="searching = true" (keyup)="applyFilter($event.target.value)" matInput>
 </mat-form-field>
-<button [hidden]="!searching" class="btn btn-sm btn-danger" (click)="cancel()">Cancel</button>
+<button [hidden]="!searching" class="btn btn-sm btn-info" (click)="cancel()">Cancel</button>
 
 <div class="mat-elevation-z5" [hidden]="!searching">
     <table mat-table [dataSource]="dataSource" matSort width="100%" >
