--- a/ClientApp/src/app/book-view/book-view.component.html
+++ b/ClientApp/src/app/book-view/book-view.component.html
@@ -1,6 +1,6 @@
 <div class="card text-center" style="width: 26rem;">
   <h5 class="card-title">{{book.title}}</h5>
-  <h6 class="card-subtitle mb-2">{{book.author}}</h6>
+  <h6 class="card-subtitle">{{book.author}}</h6>
   <p class="card-subtitle">{{book.genre}}</p>
   <p class="card-subtitle">Form: {{book.type}}</p>
   <p class="card-subtitle">Series: {{book.series}}</p>
