--- a/ClientApp/src/app/home/home.component.html
+++ b/ClientApp/src/app/home/home.component.html
@@ -27,7 +27,7 @@
 
     <div class="row">
       <div class="col-md-4">
-        <h3>Reading Now</h3>
+        <h3 class="text-center">Reading Now</h3>
         <div *ngIf="reading.length!=0">
           <div *ngFor="let book of reading">
             <div class="card text-center" style="width: 18rem;">
@@ -48,7 +48,7 @@
       </div>
 
       <div class="col-md-4">
-        <h3>Reading Next</h3>
+        <h3 class="text-center">Reading Next</h3>
         <div *ngIf="read.length!=0">
           <div *ngFor="let book of read">
             <div class="card text-center" style="width: 18rem;">
@@ -69,7 +69,7 @@
       </div>
 
       <div class="col-md-4">
-        <h3>Wanna Buy!</h3>
+        <h3 class="text-center">Wanna Buy!</h3>
         <div *ngIf="buy.length!=0">
           <div *ngFor="let book of buy">
             <div class="card text-center" style="width: 18rem;">
