--- a/ClientApp/src/app/new-book/new-book.component.html
+++ b/ClientApp/src/app/new-book/new-book.component.html
@@ -1,38 +1,38 @@
 <div class="card text-center">
-  <h3>Add a book to the catalog</h3>
-  <div>
+  <h3 class="card-title">Add a book to the catalog</h3>
+  <!-- <div>
     <input [(ngModel)]="isbn">
     <button (click)="getByIsbn()">Add</button>
-  </div>
+  </div> -->
   <div class="align-items-center">
     <form>
       <div class="row">
         <div class="col">
-          <label for="title">Title</label>
+          <label class="card-subtitle" for="title">Title</label>
           <input class="form-control" type="text" [(ngModel)]="newBook.title" name="title" id="title" />
         </div>
         <div class="col">
-          <label for="author">Author</label>
+          <label class="card-subtitle" for="author">Author</label>
           <input class="form-control" type="text" [(ngModel)]="newBook.author" name="author" id="author" />
         </div>
         <div class="col">
-          <label for="genre">Genre</label>
+          <label class="card-subtitle" for="genre">Genre</label>
           <input class="form-control" type="text" [(ngModel)]="newBook.genre" name="genre" id="genre" />
         </div>
       </div>
       <div class="row">
         <div class="col">
-          <label for="series">Series</label>
+          <label class="card-subtitle" for="series">Series</label>
           <input class="form-control" type="text" [(ngModel)]="newBook.series" name="series" id="series" />
         </div>
         <div class="col">
-          <label for="status">Status</label>
+          <label class="card-subtitle" for="status">Status</label>
           <select class="form-control" [(ngModel)]="newBook.status" name="status" id="status">
             <option *ngFor="let stat of options" [value]="stat">{{stat}}</option>
           </select>
         </div>
         <div class="col">
-          <label for="type">Type</label>
+          <label class="card-subtitle" for="type">Type</label>
           <select class="form-control" [(ngModel)]="newBook.type" name="type" id="type">
             <option *ngFor="let type of types" [value]="type">{{type}}</option>
           </select>
@@ -40,7 +40,7 @@
       </div>
       <div class="row">
         <div class="col">
-          <label for="notes">Notes</label>
+          <label class="card-subtitle" for="notes">Notes</label>
           <textarea class="form-control" [(ngModel)]="newBook.notes" name="notes" id="notes" rows="3"></textarea>
         </div>
       </div>
