Missed some h4s. Made book bg a little more opaque

--- a/ClientApp/src/app/edit-book/edit-book.component.html
+++ b/ClientApp/src/app/edit-book/edit-book.component.html
@@ -1,5 +1,5 @@
 <div class="card text-center">
-  <h3>Edit {{book.title}}</h3>
+  <h3 class="card-title">Edit {{book.title}}</h3>
   <div class="align-items-center">
     <form>
       <div class="row">
