--- a/ClientApp/src/app/new-book/new-book.component.html
+++ b/ClientApp/src/app/new-book/new-book.component.html
@@ -2,7 +2,7 @@
   <h3 class="card-title">Add a book to the catalog</h3>
   <!-- <div>
     <input [(ngModel)]="isbn">
-    <button (click)="getByIsbn()">Add</button>
+    <button class="btn btn-ok" (click)="getByIsbn()">Add</button>
   </div> -->
   <div class="align-items-center">
     <form>
