--- a/ClientApp/src/app/save-modal/save-modal.component.html
+++ b/ClientApp/src/app/save-modal/save-modal.component.html
@@ -2,7 +2,7 @@
     <h3>Definitely added that book to your catalog!</h3> 
     <h3>Do you want to add any more books??</h3>
     <div class="buttons">
-      <button tyh3e="button" class="btn btn-danger" (click)="yes()">Yes!</button>
-      <button tyh3e="button" class="btn btn-ok" (click)="close()">Maybe later</button>
+      <button type="button" class="btn btn-danger" (click)="yes()">Yes!</button>
+      <button type="button" class="btn btn-ok" (click)="close()">Maybe later</button>
     </div>
   </div>
