--- a/ClientApp/src/app/confirm-modal/confirm-modal.component.html
+++ b/ClientApp/src/app/confirm-modal/confirm-modal.component.html
@@ -1,7 +1,7 @@
 <div class="pop text-center">
   <h3>Trash this book forever??</h3>
   <div class="buttons">
-    <button tyh3e="button" class="btn btn-danger" (click)="yes()">Yes</button>
-    <button tyh3e="button" class="btn btn-ok" (click)="close()">No!</button>
+    <button type="button" class="btn btn-danger" (click)="yes()">Yes</button>
+    <button type="button" class="btn btn-ok" (click)="close()">No!</button>
   </div>
 </div>
