--- a/ClientApp/src/app/new-book/new-book.component.html
+++ b/ClientApp/src/app/new-book/new-book.component.html
@@ -70,8 +70,12 @@
           <textarea class="form-control" [(ngModel)]="newBook.notes" name="notes" id="notes" rows="3"></textarea>
         </div>
       </div>
+      <button class="btn btn-ok" [disabled]="title.invalid" (click)="getCover(newBook.title)">Choose Book Cover</button>
       <button type="submit" [disabled]="f.invalid" class="btn btn-ok" (click)="save()">Save</button>
       <button class="btn btn-info" routerLink="/catalog">Nevermind!</button>
     </form>
+    <div *ngFor="let result of results">
+      <p>title: {{result.title}}</p>
+    </div>
   </div>
 </div>
