--- a/ClientApp/src/app/new-book/new-book.component.html
+++ b/ClientApp/src/app/new-book/new-book.component.html
@@ -25,9 +25,9 @@
           <label class="card-subtitle" for="author">Author</label>
           <input class="form-control" required type="text" [(ngModel)]="newBook.author" name="author" id="author"
             #author="ngModel" />
-            <div class="form-control-feedback" *ngIf="author.errors && (author.dirty || author.touched)">
-              <p *ngIf="author.errors.required">Give me a name, any name</p>
-            </div>
+          <div class="form-control-feedback" *ngIf="author.errors && (author.dirty || author.touched)">
+            <p *ngIf="author.errors.required">Give me a name, any name</p>
+          </div>
         </div>
         <div class="col">
           <label class="card-subtitle" for="genre">Genre</label>
@@ -37,14 +37,16 @@
       <div class="row">
         <div class="col">
           <label class="card-subtitle" for="series">Series</label>
-          <input class="form-control" type="text" [(ngModel)]="newBook.series" name="series" id="series" />
+          <input class="form-control" type="text" [(ngModel)]="newBook.series" name="series" id="series"
+            placeholder="Leave blank if none" />
         </div>
         <div class="col" [ngClass]="{
           'has-danger': status.invalid && (status.dirty || status.touched),
           'has-success': status.valid && (status.dirty || status.touched)
      }">
           <label class="card-subtitle" for="status">Status</label>
-          <select class="form-control" required [(ngModel)]="newBook.status" name="status" id="status" #status="ngModel">
+          <select class="form-control" required [(ngModel)]="newBook.status" name="status" id="status"
+            #status="ngModel">
             <option *ngFor="let stat of options" [value]="stat">{{stat}}</option>
           </select>
           <div class="form-control-feedback" *ngIf="status.errors && (status.dirty || status.touched)">
@@ -74,8 +76,15 @@
       <button type="submit" [disabled]="f.invalid" class="btn btn-ok" (click)="save()">Save</button>
       <button class="btn btn-info" routerLink="/catalog">Nevermind!</button>
     </form>
-    <div *ngFor="let result of results">
-      <img [hidden]="!result.cover_i" src="http://covers.openlibrary.org/b/id/{{result.cover_i}}-M.jpg" alt="{{result.title}} cover image" (click)="chooseCover(result.cover_i)">
+
+    <p *ngIf="!results">No cover found!</p>
+    <p *ngIf="results">Covers found: {{results.length}}</p>
+    <div class="row">
+      <div [hidden]="!result.cover_i" class="col" *ngFor="let result of results">
+        <img 
+          src="https://covers.openlibrary.org/b/id/{{result.cover_i}}-M.jpg" alt="{{result.title}} cover image"
+          (click)="chooseCover(result)">
+      </div>
     </div>
   </div>
 </div>
