added changelog component. Removed initial home content. Removed bg image.

--- a/ClientApp/src/app/app.component.html
+++ b/ClientApp/src/app/app.component.html
@@ -3,5 +3,5 @@
   <div role="main" class="container">
     <router-outlet></router-outlet>
   </div>
-  <footer class="footer text-muted"><span>Background image by <a href="https://unsplash.com/@pawel_czerwinski?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Paweł Czerwiński</a> on <a href="https://unsplash.com/@pawel_czerwinski?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a></span></footer>
+  <footer class="footer text-muted"> Designed and built by <a href="https://github.com/AmyTroutman">Amy Troutman</a> 2020</footer>
 </body>
