--- a/ClientApp/src/styles.css
+++ b/ClientApp/src/styles.css
@@ -25,7 +25,7 @@ body {
    margin: 0; 
    font-family: 'Lato', "Helvetica Neue", sans-serif; 
    background-color: #021b33; 
-   background-image: url("../src/assets/bookEndsheet.jpg");
+   /* background-image: url("../src/assets/bookEndsheet.jpg"); */
    background-size: cover;
    background-attachment: fixed;
    color: #ffdbcd;
@@ -46,15 +46,16 @@ h1 {
 }
 
 footer {
-  margin-top: 20%;
-  bottom: 0;
+  /* margin-top: 20%;
+  bottom: 0; */
+  font-size: smaller;
 }
 
 .card {
-  background-color: #c56558ce;
-  border: 2px solid #05325c;
+  background-color: #05325cce;
+  border: 2px solid #c56558;
   width: 100%;
-  color: #001036;
+  color: #ffdbcd;
   font-family: 'Alice', serif;
 }
 
