--- a/ClientApp/src/app/book/book.component.html
+++ b/ClientApp/src/app/book/book.component.html
@@ -5,8 +5,8 @@
                 <a [routerLink]="['/book', book.id]">
                     <div class="card-body">
                         <img class="card-img-top" src="http://covers.openlibrary.org/b/id/{{book.cover}}-L.jpg" alt="{{book.title}} cover image">
-                        <h4 class="card-title">{{book.title}}</h4>
-                        <h6 class="card-subtitle mb-2 ">{{book.author}}</h6>
+                        <h4 *ngIf="!book.cover" class="card-title">{{book.title}}</h4>
+                        <h6 *ngIf="!book.cover" class="card-subtitle mb-2 ">{{book.author}}</h6>
                     </div>
                 </a>
             </div>
